--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,5 +1,5 @@
-{{ template "base.tmpl" . }}
+{{ template "base" . }}
 
 {{ define "content" }}
-<h1 class="blue"> Title: {{.title}} </h1>
+<h1 class="blue"> Home: {{.title}} </h1>
 {{ end }}
