--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -1,3 +1,4 @@
+{{ define "base" }}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,7 +8,8 @@
     <title>Document</title>
   </head>
   <body>
-    {{ block "header" . }} {{template "navbar" .}} {{ end }}
-    {{ block "content" . }}{{ end }} {{ block "footer" . }}{{ end }}
+    {{ template "navbar" .}}
+    {{ block "content" .}} {{ end }}
   </body>
 </html>
+{{ end }}
