--- a/templates/navbar.tmpl
+++ b/templates/navbar.tmpl
@@ -1,21 +1,18 @@
-{{ block "navbar" . }} 
-
-
+{{ define "navbar" }}
 <nav class="py-3 shadow-lg mb-5">
 <ul class="flex">
   <li class="ml-3 mr-6">
-    <a class="text-blue-500 hover:text-blue-800" href="/">Home</a>
+    <a class="text-blue-500 hover:text-blue-800" href="/public/">Home</a>
   </li>
   <li class="mr-6">
-    <a class="text-blue-500 hover:text-blue-800" href="/resume">Resume/CV</a>
+    <a class="text-blue-500 hover:text-blue-800" href="/public/resume/">Resume/CV</a>
   </li>
   <li class="mr-6">
-    <a class="text-blue-500 hover:text-blue-800" href="#3">Contact</a>
+    <a class="text-blue-500 hover:text-blue-800" href="/public/contact/">Contact</a>
   </li>
   <li class="mr-6">
     <a class="text-gray-400 cursor-not-allowed" href="#4">Login</a>
   </li>
 </ul>
 </nav>
-
-{{end}}
+{{ end }}
