Fill one template with some random latin (lorem)

--- a/templates/contact.tmpl
+++ b/templates/contact.tmpl
@@ -1,5 +1,37 @@
 {{ template "base" . }}
 
 {{ define "content" }}
-<h1 class="blue"> Contact: {{.title}} </h1>
+<h1 class="blue">Contact: {{.title}}</h1>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores delectus
+  quibusdam itaque, nam consequuntur ducimus eaque molestiae esse reprehenderit
+  non, officiis dignissimos! Fuga autem reiciendis accusamus, dolore
+  perspiciatis quas enim corrupti commodi aspernatur nemo sit odio ut dolorum,
+  est eaque aut consectetur optio reprehenderit? Facilis a earum necessitatibus
+  non reprehenderit nam optio excepturi, dolore voluptas sapiente molestias
+  accusamus quos et nesciunt quod eveniet officia doloribus corporis iusto unde
+  porro tempora laboriosam, rem esse. Perferendis reprehenderit mollitia porro
+  illo accusamus qui exercitationem id quae consequatur! Omnis, voluptas?
+  Delectus illum et tempora possimus sunt enim quis quibusdam dolores veritatis
+  recusandae numquam accusantium repellendus, rerum totam atque vel nam nostrum
+  iure perferendis veniam quae debitis corrupti voluptatum perspiciatis! Quidem
+  quam quis sit perspiciatis repellendus sapiente distinctio consequuntur, magni
+  ab aut eaque accusamus provident expedita, quisquam molestias porro nemo
+  dolore recusandae iusto veritatis? Harum, eos sequi! Dolorum, omnis?
+  Exercitationem libero quod at, itaque ratione perferendis dolorum distinctio
+  sunt error. Illo iusto inventore dignissimos omnis maxime recusandae rerum,
+  sit repudiandae accusantium distinctio veniam officia suscipit ex consectetur
+  modi culpa dolorem. Veniam magnam a voluptatem ad quo, harum ratione enim,
+  tenetur, doloremque ab ducimus soluta? Eos ad mollitia fugit dolorum quae
+  quasi, odit nobis beatae nisi. Labore minus tempore delectus, eaque totam
+  vero, alias soluta iste error, autem vel debitis? Non incidunt, placeat, iure,
+  minus ullam hic eius sint quidem sed quos vitae dolorum ut? Aspernatur optio
+  porro tenetur repudiandae nam corporis odit quaerat velit debitis harum,
+  fugiat id molestiae ipsum magnam blanditiis cum quia. Fuga, nisi explicabo.
+  Repellendus sequi, ipsa provident recusandae debitis odit aperiam cum odio
+  optio facilis dignissimos ut dicta ad amet id quo pariatur numquam totam?
+  Omnis perspiciatis eveniet aperiam, tempora non accusantium repellat minus
+  quo. Alias, numquam, maxime omnis saepe at sunt fugit eveniet quae sapiente
+  repellat aut asperiores, dolores nam.
+</p>
 {{ end }}
